--- a/frontend/src/styles/LayoutStyles.css
+++ b/frontend/src/styles/LayoutStyles.css
@@ -7,10 +7,10 @@
 }
 
 .sidebar {
-  height: 585px;
+  height: 1000px;
   width: 300px;
   border-radius: 5px;
-  background-color: rgb(38, 46, 192);
+  background-color: rgb(0, 57, 111);
   box-shadow: 0 0 2px gray;
   margin-right: 20px;
   color: white;
@@ -26,14 +26,14 @@
   margin-bottom: 20px;
   box-shadow: 0 0 2px gray;
   background-color: rgb(99, 129, 241);
-  border-radius: 8px
+  border-radius: 8px;
 }
 .body {
-  height: 85vh;
-  margin-bottom: 20px;
+  height: 100%;
+  padding-bottom: 50px;
   box-shadow: 0 0 2px gray;
   background-color: white;
-  border-radius: 8px
+  border-radius: 8px;
 }
 .logo h6 {
   font-size: 1.5rem;
